fix bug with selecting first opponent piece + tests